--- a/TODO
+++ b/TODO
@@ -1,2 +1,5 @@
 fix aimbot shooting through cart (and other parts of the map)
 get all catbots to restart after 10 hours (prevents memory leaks)
+get a new damn router lol - :skull: 
+try to make Burgerhook auto warp melee for boats? 
+try to make bot finish off enemy with bodyshot.
