--- a/TODO
+++ b/TODO
@@ -3,3 +3,4 @@ get all catbots to restart after 10 hours (prevents memory leaks)
 get a new damn router lol - :skull: 
 try to make Burgerhook auto warp melee for boats? 
 try to make bot finish off enemy with bodyshot.
+optimize nav mesh for all maps (if possible) 
