--- a/TODO
+++ b/TODO
@@ -3,4 +3,4 @@ get all catbots to restart after 10 hours (prevents memory leaks)
 get a new damn router lol - 💀
 try to make Burgerhook auto warp melee for boats? 
 optimize nav mesh for all maps (if possible) 
-take care of burgerhook :steamhappy: 
+take care of burgerhook and unbloat it as much as humanly possible 💀
