--- a/TODO
+++ b/TODO
@@ -4,3 +4,4 @@ get a new damn router lol - 💀
 try to make Burgerhook auto warp melee for boats? 
 optimize nav mesh for all maps (if possible) 
 take care of burgerhook and unbloat it as much as humanly possible 💀
+Joe2005 to shut his whiny ass up for a couple of days.
