--- a/TODO
+++ b/TODO
@@ -1,6 +1,3 @@
 fix aimbot shooting through cart (and other parts of the map)
 get all catbots to restart after 10 hours (prevents memory leaks)
-get a new damn router lol - 💀
-try to make Burgerhook auto warp melee for boats? 
-optimize nav mesh for all maps (if possible) 
-Make burgerhook last longer without crashing. 
+I'm Done.
